--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="accordion-container mb-15">
 			<div class="accordion-header flex-container flex-vcenter">
 				<div class="title flex-col flex-grow flex-shrink">Accordion title</div>
-				<div class="icon flex-col"><img width="15" height="12" src="assets/images/chevron-down.svg"></div>
+				<div class="icon flex-col accordion-button"><img width="15" height="12" src="assets/images/chevron-down.svg"></div>
 			</div>
 			<div class="accordion-content">
 				<p>
@@ -25,7 +25,7 @@
 		</div>
 		
 		<div class="accordion-container opened">
-			<div class="accordion-header flex-container flex-vcenter">
+			<div class="accordion-header flex-container flex-vcenter accordion-button">
 				<div class="title flex-col flex-grow flex-shrink">Accordion title</div>
 				<div class="icon flex-col"><img width="15" height="12" src="assets/images/chevron-down.svg"></div>
 			</div>
@@ -35,6 +35,7 @@
 				</p>
 			</div>
 		</div>
+
 		<script src="assets/js/theui.js"></script>
 		<script src="assets/js/theui.accordion.js"></script>
 	</body>
