--- a/index.html
+++ b/index.html
@@ -89,39 +89,38 @@
 			</div>
 		</div>
 
-		<div class="modal-container flex-container flex-dir-column" data-modal_id="modal-1">
+		<div class="modal-container flex-container flex-dir-column" data-modal_id="modal-1" data-modal_settings='{ "CloseOnEscape": true }'>
 			<div class="modal-header flex-col flex-container flex-vcenter">
-				<div class="modal-title flex-col flex-grow flex-shrink">Lorem ipsum</div>
+				<div class="modal-title flex-col flex-grow flex-shrink"><h2>Lorem ipsum</h2></div>
 				<div class="modal-close flex-col">X</div>
 			</div>
 			<div class="modal-content flex-col flex-grow flex-shrink">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacus diam, gravida sagittis lacinia nec, maximus non sapien. Proin iaculis, quam eget sodales interdum, ligula libero gravida odio, et porttitor ipsum neque sit amet ex. Integer id tortor ipsum. Duis sit amet condimentum mauris. Etiam dignissim ligula metus, et congue dolor finibus eu. In hac habitasse platea dictumst. Donec iaculis ipsum sit amet neque gravida efficitur. Suspendisse ultrices consectetur commodo. Nam commodo sem vel enim venenatis, eget pharetra nisi tempus. Suspendisse molestie, mi sit amet facilisis bibendum, ligula felis pharetra nisi, eget imperdiet tellus arcu nec quam. Morbi ut volutpat nunc. Aliquam sit amet risus posuere, efficitur enim non, vestibulum lacus. Vivamus convallis tristique molestie. Ut tincidunt tellus at porta ornare. Suspendisse lobortis vulputate elit.</p>
+				<p><strong>data-modal_settings='{"CloseOnEscape": true}</strong><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacus diam, gravida sagittis lacinia nec, maximus non sapien. Proin iaculis, quam eget sodales interdum, ligula libero gravida odio, et porttitor ipsum neque sit amet ex. Integer id tortor ipsum. Duis sit amet condimentum mauris. Etiam dignissim ligula metus, et congue dolor finibus eu. In hac habitasse platea dictumst. Donec iaculis <strong><mark>Todo: handle multiple modal instances.</mark></strong> ipsum sit amet neque gravida efficitur. Suspendisse ultrices consectetur commodo. Nam commodo sem vel enim venenatis, eget pharetra nisi tempus. Suspendisse molestie, mi sit amet facilisis bibendum, ligula felis pharetra nisi, eget imperdiet tellus arcu nec quam. Morbi ut volutpat nunc. Aliquam sit amet risus posuere, efficitur enim non, vestibulum lacus. Vivamus convallis tristique molestie. Ut tincidunt tellus at porta ornare. Suspendisse lobortis vulputate elit.</p>
+
+
+				<button type="button" class="modal-close">Close this modal</button>
 
 				<p>Integer sit amet felis vel elit laoreet cursus a nec urna. Pellentesque sit amet iaculis arcu. Vestibulum dictum justo non lacinia facilisis. Vestibulum vel sapien eget nibh gravida luctus. Ut aliquam mauris non metus iaculis, ut lobortis nulla facilisis. Ut velit lectus, faucibus in ultricies eget, imperdiet ut ante. Cras vel hendrerit ligula. Quisque quam diam, pulvinar vitae laoreet id, fermentum sit amet nisl. In auctor elit eget elit aliquam, in pellentesque orci elementum. Quisque maximus velit eget ipsum aliquet, nec finibus risus pharetra. Suspendisse congue tincidunt finibus.</p>
-
-				<p>Nunc vel dui nec lectus gravida porttitor nec at ipsum. Vestibulum congue leo eget imperdiet malesuada. Cras id nisl non nunc vulputate interdum ut vel purus. In et finibus leo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent fringilla leo et porttitor porta. Maecenas et tincidunt lectus.</p>
-
-				<p>Proin bibendum orci in purus rutrum porta. Duis pretium nulla elementum eros suscipit elementum. Curabitur ultrices laoreet vulputate. Integer dictum ex ut tellus efficitur auctor. Aenean nisl nulla, lobortis ut euismod a, tincidunt a erat. Proin tristique ipsum vitae est sodales vulputate. Proin scelerisque viverra est, eget malesuada quam cursus faucibus. Morbi eros tortor, euismod nec sollicitudin ut, scelerisque eget purus. Aliquam quis nulla sed ipsum interdum maximus et sed eros. Suspendisse potenti. Aenean laoreet vel tellus a lobortis.</p>
-
-				<p>Nunc sodales varius massa quis blandit. Cras dui quam, faucibus at nisi vitae, faucibus sagittis nulla. Ut luctus placerat ornare. Ut nec consectetur lacus. Nam id ante odio. Praesent nibh odio, molestie sed sodales non, tincidunt eu ligula. Morbi varius porta sem in ullamcorper. Vivamus augue nunc, tempor sit amet ornare in, tincidunt a est. Nulla eu convallis mi, et egestas nisi. Nunc laoreet dui urna, eu viverra felis venenatis ut. In hac habitasse platea dictumst. Sed elementum condimentum lacus nec ornare. Phasellus ut velit congue ante convallis auctor ac quis tortor. Nullam laoreet massa sed molestie feugiat.</p>	
 			</div>
 		</div>
 		
 		<div class="modal-container flex-container flex-dir-column" data-modal_id="modal-2" data-modal_settings='{"CloseOnBackDropClick": false}'>
 			<div class="modal-header flex-col flex-container flex-vcenter">
-				<div class="modal-title flex-col flex-grow flex-shrink">Lorem ipsum</div>
-				<div class="modal-close flex-col">X</div>
+				<div class="modal-title flex-col flex-grow flex-shrink"><h1>Lorem ipsum</h1></div>
 			</div>
 			<div class="modal-content flex-col flex-grow flex-shrink">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacus diam, gravida sagittis lacinia nec, maximus non sapien. Proin iaculis, quam eget sodales interdum, ligula libero gravida odio, et porttitor ipsum neque sit amet ex. Integer id tortor ipsum. Duis sit amet condimentum mauris. Etiam dignissim ligula metus, et congue dolor finibus eu. In hac habitasse platea dictumst. Donec iaculis ipsum sit amet neque gravida efficitur. Suspendisse ultrices consectetur commodo. Nam commodo sem vel enim venenatis, eget pharetra nisi tempus. Suspendisse molestie, mi sit amet facilisis bibendum, ligula felis pharetra nisi, eget imperdiet tellus arcu nec quam. Morbi ut volutpat nunc. Aliquam sit amet risus posuere, efficitur enim non, vestibulum lacus. Vivamus convallis tristique molestie. Ut tincidunt tellus at porta ornare. Suspendisse lobortis vulputate elit.</p>
-
-				<p>Integer sit amet felis vel elit laoreet cursus a nec urna. Pellentesque sit amet iaculis arcu. Vestibulum dictum justo non lacinia facilisis. Vestibulum vel sapien eget nibh gravida luctus. Ut aliquam mauris non metus iaculis, ut lobortis nulla facilisis. Ut velit lectus, faucibus in ultricies eget, imperdiet ut ante. Cras vel hendrerit ligula. Quisque quam diam, pulvinar vitae laoreet id, fermentum sit amet nisl. In auctor elit eget elit aliquam, in pellentesque orci elementum. Quisque maximus velit eget ipsum aliquet, nec finibus risus pharetra. Suspendisse congue tincidunt finibus.</p>
+				<p><strong>data-modal_settings='{"CloseOnBackDropClick": false}<br></strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacus diam, gravida sagittis lacinia nec, maximus non sapien. Proin iaculis, quam eget sodales interdum, ligula libero gravida odio, et porttitor ipsum neque sit amet ex. Integer id tortor ipsum. Duis sit amet condimentum mauris. Etiam dignissim ligula metus, et congue dolor finibus eu. In hac habitasse platea dictumst. Donec iaculis ipsum sit amet neque gravida efficitur. Suspendisse ultrices consectetur commodo. Nam commodo sem vel enim venenatis, eget pharetra nisi tempus. Suspendisse molestie, mi sit amet facilisis bibendum, ligula felis pharetra nisi, eget imperdiet tellus arcu nec quam. Morbi ut volutpat nunc. Aliquam sit amet risus posuere, efficitur enim non, vestibulum lacus. Vivamus convallis tristique molestie. Ut tincidunt tellus at porta ornare. Suspendisse lobortis vulputate elit.</p>
 
 				<p>Nunc vel dui nec lectus gravida porttitor nec at ipsum. Vestibulum congue leo eget imperdiet malesuada. Cras id nisl non nunc vulputate interdum ut vel purus. In et finibus leo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent fringilla leo et porttitor porta. Maecenas et tincidunt lectus.</p>
+			</div>
 
-				<p>Proin bibendum orci in purus rutrum porta. Duis pretium nulla elementum eros suscipit elementum. Curabitur ultrices laoreet vulputate. Integer dictum ex ut tellus efficitur auctor. Aenean nisl nulla, lobortis ut euismod a, tincidunt a erat. Proin tristique ipsum vitae est sodales vulputate. Proin scelerisque viverra est, eget malesuada quam cursus faucibus. Morbi eros tortor, euismod nec sollicitudin ut, scelerisque eget purus. Aliquam quis nulla sed ipsum interdum maximus et sed eros. Suspendisse potenti. Aenean laoreet vel tellus a lobortis.</p>
-
-				<p>Nunc sodales varius massa quis blandit. Cras dui quam, faucibus at nisi vitae, faucibus sagittis nulla. Ut luctus placerat ornare. Ut nec consectetur lacus. Nam id ante odio. Praesent nibh odio, molestie sed sodales non, tincidunt eu ligula. Morbi varius porta sem in ullamcorper. Vivamus augue nunc, tempor sit amet ornare in, tincidunt a est. Nulla eu convallis mi, et egestas nisi. Nunc laoreet dui urna, eu viverra felis venenatis ut. In hac habitasse platea dictumst. Sed elementum condimentum lacus nec ornare. Phasellus ut velit congue ante convallis auctor ac quis tortor. Nullam laoreet massa sed molestie feugiat.</p>	
+			<div class="modal-footer flex-container flex-vcenter">
+				<div class="flex-col">
+					<button class="button cancel-button modal-close">Cancel</button>
+				</div>
+				<div class="flex-col block-right">
+					<button class="button ok-button" data-modal_target_id="modal-1">OK</button>
+				</div>
 			</div>
 		</div>
 
